sfdx-source/main/default/objects/NTSP_Peer_Review__c/NTSP_Peer_Review__c.object-meta.xml
<CustomObject>
    <label>NTSP Peer Review</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>NTSP Peer Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NTSP Peer Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>