sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Acute_Stroke_Script_Followed__c.field-meta.xml
<CustomField>
    <fullName>Acute_Stroke_Script_Followed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>IF acute stroke criteria met OR not met, the script was followed.</inlineHelpText>
    <label>Call script was followed</label>
    <type>Checkbox</type>
</CustomField>