sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Admitted_Locally_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Locally_Follow_Up__c</fullName>
    <inlineHelpText>If Admitted Locally, Were You Alerted Re: 24 Hr Follow up?</inlineHelpText>
    <label>Alerted re: 24hr follow up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>