sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Alteplase_Administered__c.field-meta.xml
<CustomField>
    <fullName>Alteplase_Administered__c</fullName>
    <label>Alteplase Administered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>