sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Alteplase_recommendation__c.field-meta.xml
<CustomField>
    <fullName>Alteplase_recommendation__c</fullName>
    <label>Alteplase recommendation appropriate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitely Yes</fullName>
            </value>
            <value>
                <fullName>Probably Yes</fullName>
            </value>
            <value>
                <fullName>Probably No</fullName>
            </value>
            <value>
                <fullName>Definitely No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>