sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Alteplase_Recommendation_Explain__c.field-meta.xml
<CustomField>
    <fullName>Alteplase_Recommendation_Explain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>If &quot;No&quot;, please explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>