sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/BEFAST_LKW_Within_8_Hours__c.field-meta.xml
<CustomField>
    <fullName>BEFAST_LKW_Within_8_Hours__c</fullName>
    <label>BEFAST &amp; LKW within 8 hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>