sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Current_User_Is_Reviewee__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Is_Reviewee__c</fullName>
    <description>Is the current user the reviewee. Used to prevent users from viewing their own peer review in all peer review list view.</description>
    <formula>Reviewee__c = ($User.FirstName + &apos; &apos; + $User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Is Reviewee</label>
    <type>Checkbox</type>
</CustomField>