sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Date_of_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Review__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Review</label>
    <required>true</required>
    <type>Date</type>
</CustomField>