sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Drip_and_Ship_Patient__c.field-meta.xml
<CustomField>
    <fullName>Drip_and_Ship_Patient__c</fullName>
    <label>Drip and Ship Patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>