sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/LKW_is_unknown__c.field-meta.xml
<CustomField>
    <fullName>LKW_is_unknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LKW is unknown</label>
    <type>Checkbox</type>
</CustomField>