sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/LKW_Time_from_Case__c.field-meta.xml
<CustomField>
    <fullName>LKW_Time_from_Case__c</fullName>
    <formula>NTSP_Case__r.Hours_Delayed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay Time in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>