sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/LKW_Time_Gathered__c.field-meta.xml
<CustomField>
    <fullName>LKW_Time_Gathered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If unable to gather, did the nurse spend 1 minute or less on this question?</inlineHelpText>
    <label>LKW time gathered in less than 1 minute</label>
    <type>Checkbox</type>
</CustomField>