sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Local_Time_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_of_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Time of Call</label>
    <type>Checkbox</type>
</CustomField>