sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Mark_any_reason_for_call_delay__c.field-meta.xml
<CustomField>
    <fullName>Mark_any_reason_for_call_delay__c</fullName>
    <label>Mark any reason for call delay:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Nurse places Triage on HOLD</fullName>
            </value>
            <value>
                <fullName>Site Provider places Triage on HOLD</fullName>
            </value>
            <value>
                <fullName>Site MSA places Triage on HOLD</fullName>
            </value>
            <value>
                <fullName>Site places Triage on HOLD X2</fullName>
            </value>
            <value>
                <fullName>Site places Triage on HOLD X3</fullName>
            </value>
            <value>
                <fullName>Provider unclear on information, must confirm with others</fullName>
            </value>
            <value>
                <fullName>Site unable to answer other than PT identification info</fullName>
            </value>
            <value>
                <fullName>Criteria not met - site claims its policy is to consult TS</fullName>
            </value>
            <value>
                <fullName>Site does not have all information needed to make solid decision</fullName>
            </value>
            <value>
                <fullName>Call is confusing when gathering info for stroke symptoms</fullName>
            </value>
            <value>
                <fullName>LKW unclear, takes &gt;1 min to obtain final LKW</fullName>
            </value>
            <value>
                <fullName>LKW is unknown</fullName>
            </value>
            <value>
                <fullName>Can&apos;t hear caller or caller can&apos;t hear TS RN</fullName>
            </value>
            <value>
                <fullName>Lost connection of call</fullName>
            </value>
            <value>
                <fullName>TS provider not ready for report</fullName>
            </value>
            <value>
                <fullName>TS provider gets report - reassigns to alternate TS provider</fullName>
            </value>
            <value>
                <fullName>TS provider did not immediately answer triage call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>