sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Name_Role_of_Caller__c.field-meta.xml
<CustomField>
    <fullName>Name_Role_of_Caller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name &amp; Role of Caller</label>
    <type>Checkbox</type>
</CustomField>