sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/NTSP_Case__c.field-meta.xml
<CustomField>
    <fullName>NTSP_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NTSP Case</label>
    <referenceTo>NTSP_Case__c</referenceTo>
    <relationshipLabel>NTSP Peer Reviews</relationshipLabel>
    <relationshipName>NTSP_Peer_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>