sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/NTSP_Consultant_Calabrio_ID__c.field-meta.xml
<CustomField>
    <fullName>NTSP_Consultant_Calabrio_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NTSP Consultant Calabrio ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>