sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/NTSP_Facility__c.field-meta.xml
<CustomField>
    <fullName>NTSP_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NTSP Facility</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This facility is not registered as a NTSP site.</errorMessage>
        <filterItems>
            <field>NTSP_Facility__c.NTSP_Registered_Site__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NTSP_Facility__c</referenceTo>
    <relationshipLabel>NTSP Peer Reviews</relationshipLabel>
    <relationshipName>NTSP_Peer_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>