sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Patient_Last_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Patient_Last_Name_Formula__c</fullName>
    <formula>NTSP_Case__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>