sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Patients_last_4_formula__c.field-meta.xml
<CustomField>
    <fullName>Patients_last_4_formula__c</fullName>
    <formula>NTSP_Case__r.Last_Four__c</formula>
    <label>Last 4 of SSN</label>
    <type>Text</type>
</CustomField>