sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Provider_didn_t_promptly_answer_call__c.field-meta.xml
<CustomField>
    <fullName>Provider_didn_t_promptly_answer_call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider didn&apos;t promptly answer call</label>
    <type>Checkbox</type>
</CustomField>