sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Provider_Given_Same_Info__c.field-meta.xml
<CustomField>
    <fullName>Provider_Given_Same_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Provider given same information as gathered</inlineHelpText>
    <label>Info accurately passed to provider</label>
    <type>Checkbox</type>
</CustomField>