sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Ready_With_Symptoms_LKW__c.field-meta.xml
<CustomField>
    <fullName>Ready_With_Symptoms_LKW__c</fullName>
    <label>Ready with symptoms &amp; LKW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>