sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Reviewee__c.field-meta.xml
<CustomField>
    <fullName>Reviewee__c</fullName>
    <formula>IF (RecordType.Name = &apos;Triage Nurse Peer Review&apos;, NTSP_Case__r.CreatedBy.FirstName + &quot; &quot; + NTSP_Case__r.CreatedBy.LastName,
        NTSP_Case__r.Telestroke_Consultant__r.FirstName + &quot; &quot; + NTSP_Case__r.Telestroke_Consultant__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is auto populated upon save.</inlineHelpText>
    <label>Reviewee</label>
    <type>Text</type>
</CustomField>