sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Site_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_Local_Time__c</fullName>
    <label>Time Documented in Site&apos;s Local Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>