sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Site_unable_to_answer_questions__c.field-meta.xml
<CustomField>
    <fullName>Site_unable_to_answer_questions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site unable to answer questions</label>
    <type>Checkbox</type>
</CustomField>