sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Spoke_With_Provider_To_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Spoke_With_Provider_To_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>IF canceled, spoke with a provider directly to cancel</inlineHelpText>
    <label>Spoke with a provider directly to cancel</label>
    <type>Checkbox</type>
</CustomField>