sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Suspected_Diagnosis_Documented__c.field-meta.xml
<CustomField>
    <fullName>Suspected_Diagnosis_Documented__c</fullName>
    <label>Suspected Diagnosis Documented</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>