sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Telestroke_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Telestroke_Consultant__c</fullName>
    <formula>NTSP_Case__r.Telestroke_Consultant__r.FirstName + &apos; &apos; + NTSP_Case__r.Telestroke_Consultant__r.LastName</formula>
    <label>Telestroke Consultant</label>
    <type>Text</type>
</CustomField>