sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Telestroke_Consultant_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Telestroke_Consultant_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telestroke Consultant Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NTSP_Peer_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>