sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula
    >IF (Call_Under_5_minutes__c = True,1,0) + IF (Name_Role_of_Caller__c = True,1,0)+ IF (Local_Time_of_Call__c = True,1,0)+ IF (Facility__c = True,1,0)+ IF (Department__c =
        True,1,0)+ IF (Direct_Call_Back_Number__c = True,1,0)+ IF (Dr_Caring_for_Patient__c = True,1,0)+ IF (Patient_Last_Name__c = True,1,0)+ IF (Patients_last_4__c = True,1,0)+
        IF (Age__c = True,1,0)+ IF (Stroke_Symptoms__c = True,1,0)+ IF (Redirects_Caller_Stroke_Symptoms__c = True,1,0)+ IF (When_Symptoms_Discovered__c = True,1,0)+ IF
        (LKW_Time_Gathered__c = True,1,0)+ IF (Appropriate_Tone_and_Speed__c = True,1,0)+ IF (Polite_And_Professional__c = True,1,0)+ IF (Nurse_Read_Back_Numbers__c = True,1,0)+ IF
        (Placed_On_Hold__c = True,1,0)+ IF (Acute_Stroke_Script_Followed__c = True,1,0)+ IF (Provider_Given_Same_Info__c = True,1,0)+ IF (Spoke_With_Provider_To_Cancel__c =
        True,1,0)+ IF ( Was_the_Last_Known_Well_Time_Gathered__c = True,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>