sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Total_Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Score_Percentage__c</fullName>
    <formula>Total_Score__c / 22</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>