sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Transfer_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Recommended__c</fullName>
    <label>Endovascular Therapy Recommended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>