sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/Was_the_correct_diagnosis_made__c.field-meta.xml
<CustomField>
    <fullName>Was_the_correct_diagnosis_made__c</fullName>
    <label>Was the correct diagnosis made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitely Yes</fullName>
            </value>
            <value>
                <fullName>Probably Yes</fullName>
            </value>
            <value>
                <fullName>Probably No</fullName>
            </value>
            <value>
                <fullName>Definitely No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>