sfdx-source/main/default/objects/NTSP_Peer_Review__c/fields/When_Symptoms_Discovered__c.field-meta.xml
<CustomField>
    <fullName>When_Symptoms_Discovered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Witnessed vs Unwitnessed</inlineHelpText>
    <label>When were Symptoms Discovered</label>
    <type>Checkbox</type>
</CustomField>