sfdx-source/main/default/objects/NTSP_Peer_Review__c/recordTypes/Consultant_Peer_Review.recordType-meta.xml
<RecordType>
    <fullName>Consultant_Peer_Review</fullName>
    <active>true</active>
    <label>Consultant Peer Review</label>
</RecordType>