sfdx-source/main/default/objects/NTSP_Peer_Review__c/recordTypes/Triage_Nurse_Peer_Review.recordType-meta.xml
<RecordType>
    <fullName>Triage_Nurse_Peer_Review</fullName>
    <active>true</active>
    <label>Triage Nurse Peer Review</label>
</RecordType>