sfdx-source/main/default/objects/NTSP_Peer_Review__c/validationRules/Enforce_Facility_Call_Length_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Facility_Call_Length_Format</fullName>
    <active>true</active>
    <description>Enforces MM:SS format on Call Length with Facility Field.</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Triage_Nurse_Peer_Review&apos; &amp;&amp; ( NOT(ISNUMBER(Length_of_Call_With_Facility__c )) ||
        NOT(VALUE(RIGHT(Length_of_Call_With_Facility__c ,2)) &lt; 60) || LEN(Length_of_Call_With_Facility__c) != 4 )</errorConditionFormula>
    <errorDisplayField>Length_of_Call_With_Facility__c</errorDisplayField>
    <errorMessage>Call Length with Facility must be entered in MMSS format. Ensure seconds are less than 60.</errorMessage>
</ValidationRule>