sfdx-source/main/default/objects/NTSP_Peer_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_of_Review__c</columns>
    <columns>Telestroke_Consultant__c</columns>
    <columns>NTSP_Case__c</columns>
    <columns>Notes_Comments__c</columns>
    <columns>Reviewee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_Is_Reviewee__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Peer Reviews</label>
</ListView>