sfdx-source/main/default/objects/NTSP_Peer_Review__c/listViews/Facility_Calls_Over_5_Minutes.listView-meta.xml
<ListView>
    <fullName>Facility_Calls_Over_5_Minutes</fullName>
    <columns>NAME</columns>
    <columns>Total_Score__c</columns>
    <columns>Total_Score_Percentage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_of_Review__c</columns>
    <columns>Telestroke_Consultant__c</columns>
    <columns>NTSP_Case__c</columns>
    <columns>Notes_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Score_Percentage__c</field>
        <operation>lessOrEqual</operation>
        <value>85.00</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NTSP_Peer_Review__c.Triage_Nurse_Peer_Review</value>
    </filters>
    <label>Peer Reviews Scored Under 85%</label>
    <sharedTo>
        <group>NTSP_Triage_Nurse_Managers</group>
        <group>NTSP_Triage_Nurse_Peer_Reviewers</group>
    </sharedTo>
</ListView>