sfdx-source/main/default/objects/NTSP_Peer_Review__c/listViews/My_Peer_Reviews.listView-meta.xml
<ListView>
    <fullName>My_Peer_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Consult_Date__c</columns>
    <columns>Telestroke_Consultant__c</columns>
    <columns>NTSP_Case__c</columns>
    <columns>Notes_Comments__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Current_User_Is_Reviewee__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Peer Reviews</label>
</ListView>